[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/tileset.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Chaser.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Explosion.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Chaser" type="Area2D" groups=["chaser"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
explosion = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.984314, 0.286275, 0.203922, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 2
region_enabled = true
region_rect = Rect2( 48, 304, 32, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Run"
anims/RESET = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Chaser_area_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
